deploy: b9f406319e58d709bc7ef6b0bc13521f25c7a7c9

--- a/AGOID.68428/manifest.json
+++ b/AGOID.68428/manifest.json
@@ -10,7 +10,7 @@
     "summary": {
         "en": [
             "This miniature by Jacob Van der Doordt, who was influenced by English miniature painting, serves as an interesting comparison with Isaac Oliver's. The hatching technique used to model the face is more evident than in Oliver's works and is particularly visible in UV.  The x-ray and (Pb) MA-XRF map show a thicker application of lead white for the carnation, which appears white against the surroundings, while Oliver's carnations rely on the vellum to give a pale hue and they are therefore typically dark in x-ray because little x-ray opaque pigment is present. That van der Doordt added more actual pigment may perhaps be explained by the fact that he was also active as a painter in oils.",
-            "The miniature is in a good state of preservation, with no evident retouching in the UV or NIR images.\n\nLead (Pb) MA-XRF map shows a possible alteration in the proper left sleeve, which also contains a high amount of zinc."
+            "The miniature is in a good state of preservation, with no evident retouching in the UV or NIR images.\nLead (Pb) MA-XRF map shows a possible alteration in the proper left sleeve, which also contains a high amount of zinc."
         ]
     },
     "requiredStatement": {
